- References field, selection dialog, did not adhere to "descriptive" setting of the
  module.
- Now if you supply credentials when creating a new Data Crow instance, Data Crow will 
  create a user with these credentials. This is true for both the client and the server
  edition if the parameter -credentials has been supplied 
  (see: https://datacrow.org/docs/starting-data-crow/)

[Changed]
- Internal structural changes have been made to allow the Data Crow core library to be
  incorporated in other applications. Most importantly the logging mechanism is now 
  completely decoupled from the code as such that it can be registered by the 
  application/app using the core library. Other major changes have been made to 
  significantly reduce the references to the AWT and Swing libraries (GUI) from the 
  Data Crow core library.
- The module wizard now allows you to create references to the same module multiple
  times.
- Removed setting: "delete picture file after adding it to an item"
- Report dialog now remembers selected target file per module and additionally also
  remembers the selected report and report format.


-----------------------------------------------------------------------------------------
Data Crow version 4.8.1                                            Released on 2023-03-28
-----------------------------------------------------------------------------------------
With version 4.8.0 I mistakingly made a structure change to the states for the various
modules. This fix reverts back that change after which you'll have all the features of
version 4.8.0 without having to deal with this pesky issue.
Luckily a user quickly notified me allowing me to fix this issue swiftly. Not many of
you will have had the version 4.8 installed but I thought it to be better to create this
release rather than trying to retract version 4.8 and re-release it.

[Fixed]
- Missing states in drop downs in various modules after upgrading to version 4.8.0.

