@@ -25,72 +25,25 @@
 
 package org.datacrow.client.synchronizers;
 
-import org.datacrow.core.log.DcLogManager;
-import org.datacrow.core.log.DcLogger;
 import org.datacrow.core.modules.DcModules;
-import org.datacrow.core.objects.DcObject;
-import org.datacrow.core.objects.helpers.Book;
 import org.datacrow.core.resources.DcResources;
 import org.datacrow.core.synchronizers.DefaultSynchronizer;
 import org.datacrow.core.synchronizers.Synchronizer;
-import org.datacrow.core.utilities.isbn.ISBN;
-import org.datacrow.core.utilities.isbn.InvalidBarCodeException;
 
-public class BookSynchronizer extends DefaultSynchronizer {
+public class BoardGameSynchronizer extends DefaultSynchronizer {
 
-    private transient static final DcLogger logger = DcLogManager.getInstance().getLogger(BookSynchronizer.class.getName());
-    
-    public BookSynchronizer() {
-        super(DcResources.getText("lblMassItemUpdate", DcModules.get(DcModules._BOOK).getObjectName()),
-              DcModules._BOOK);
+    public BoardGameSynchronizer() {
+        super(DcResources.getText("lblMassItemUpdate", DcModules.get(DcModules._BOARDGAME).getObjectName()),
+              DcModules._BOARDGAME);
     }
     
     @Override
 	public Synchronizer getInstance() {
-		return new BookSynchronizer();
+		return new BoardGameSynchronizer();
 	}
     
     @Override
     public String getHelpText() {
-        return DcResources.getText("msgBookMassUpdateHelp");
-    }
-
-    @Override
-    protected boolean matches(DcObject result, String searchString, int fieldIdx) {
-        boolean matches = false;
-        
-        try {
-            ISBN isbnInput = null;
-            ISBN isbnSearch = null;
-            
-            try {
-                // check if the search string is an ISBN
-            	isbnInput = new ISBN(searchString);
-            } catch (InvalidBarCodeException ibce) {
-                logger.debug("Search term is not a valid ISBN/EAN [" + searchString + "]");
-            }
-            
-            try {
-                // check if the book contains a valid ISBN
-                if (dco.isFilled(Book._N_ISBN13) || dco.isFilled(Book._J_ISBN10) ) {
-                	isbnSearch = new ISBN(
-                            dco.isFilled(Book._N_ISBN13) ? (String) dco.getValue(Book._N_ISBN13) : 
-                           (String) dco.getValue(Book._J_ISBN10));
-                }
-            } catch (InvalidBarCodeException ibce) {
-                logger.debug("The existing ISBN/EAN is invalid [" + 
-                        (dco.isFilled(Book._N_ISBN13) ? (String) dco.getValue(Book._N_ISBN13) : 
-                        (String) dco.getValue(Book._J_ISBN10)) + "]");
-            }
-            
-            if (isbnSearch != null && isbnInput != null) {
-                matches = isbnSearch.getIsbn13().equals(isbnInput.getIsbn13());
-            }
-
-        } catch (Exception e) {
-            logger.error(e, e);
-        }
-        
-        return matches ? true : super.matches(result, searchString, fieldIdx); 
+        return DcResources.getText("msgBoardGameMassUpdateHelp");
     }
 }
