@@ -1,3 +1,6 @@
+msgComicBookMassUpdateHelp = Updates comic books with the information retrieved from the selected Online Service. Either or perfect match on ISBN / barcode or on the title is needed to update the book successfully.
+msgComicBookCharacterMassUpdateHelp = Updates comic book characters with the information retrieved from the selected Online Service.
+msgBoardGameMassUpdateHelp = Updates board games with the information retrieved from the selected Online Service.
 msgComicVineNoApiKeyDefined = To use this online service you need to be registered at Comic Vine. Please enter a valid API Key by clicking on the settings icon located next to the server name. You can request for a completely FREE key by creating an account on ComicVine.com by going to this page (after registering). See:
 msgComicVineSearchingForCharacter = Searching for character: %1
 msgSynchServiceWaiting = Waiting for a client to connect...
