@@ -1,7 +1,7 @@
 #
-#Thu Apr 20 21:55:52 CEST 2023
+#Sat May 06 16:44:41 CEST 2023
 mass_update_server=
-online_search_ub_items=false
+selected_report=
 online_search_default_region=
 import_cd_storagemedium=
 card_view_item_description=214\#
@@ -19,7 +19,8 @@ file_import_online_service_region=
 card_view_picture_order=16\#17\#18\#
 file_import_recursive=false
 mass_update_region=
-quick_view_field_definitions={151/&/true/&/Horizontal/&/0}{16/&/true/&/Horizontal/&/0}{1/&/true/&/Horizontal/&/0}{2/&/true/&/Horizontal/&/0}{12/&/true/&/Horizontal/&/0}{13/&/true/&/Horizontal/&/0}{5/&/true/&/Horizontal/&/0}{14/&/true/&/Horizontal/&/0}{10/&/true/&/Horizontal/&/0}{213/&/true/&/Horizontal/&/0}{155/&/true/&/Horizontal/&/0}{205/&/false/&/Horizontal/&/0}{218/&/false/&/Horizontal/&/0}{6/&/true/&/Horizontal/&/0}{4/&/true/&/Horizontal/&/0}{201/&/false/&/Horizontal/&/0}{217/&/true/&/Horizontal/&/0}{214/&/false/&/Horizontal/&/0}{153/&/true/&/Horizontal/&/0}{203/&/true/&/Horizontal/&/0}{221/&/true/&/Horizontal/&/0}{220/&/true/&/Horizontal/&/0}{219/&/true/&/Horizontal/&/0}{206/&/false/&/Horizontal/&/0}{17/&/true/&/Horizontal/&/0}{18/&/true/&/Horizontal/&/0}{15/&/true/&/Horizontal/&/0}{11/&/true/&/Horizontal/&/0}{154/&/true/&/Horizontal/&/0}{3/&/true/&/Horizontal/&/0}{222/&/true/&/Horizontal/&/0}{150/&/false/&/Horizontal/&/0}{7/&/true/&/Horizontal/&/0}{8/&/true/&/Horizontal/&/0}{9/&/true/&/Horizontal/&/0}{152/&/true/&/Horizontal/&/0}{202/&/true/&/Horizontal/&/0}{204/&/true/&/Horizontal/&/0}{215/&/true/&/Horizontal/&/0}{216/&/false/&/Horizontal/&/0}
+report_type=
+quick_view_field_definitions={100000013/&/false/&/Horizontal/&/0}{100000015/&/false/&/Horizontal/&/0}{100000010/&/false/&/Horizontal/&/0}{100000213/&/false/&/Horizontal/&/0}{100000155/&/false/&/Horizontal/&/0}{100000218/&/false/&/Horizontal/&/0}{0/&/false/&/Horizontal/&/0}{100000153/&/false/&/Horizontal/&/0}{19/&/true/&/Horizontal/&/0}{100000012/&/false/&/Horizontal/&/0}{207/&/true/&/Horizontal/&/0}{208/&/true/&/Horizontal/&/0}{100000222/&/false/&/Horizontal/&/0}{100000011/&/false/&/Horizontal/&/0}{101/&/true/&/Horizontal/&/0}{104/&/true/&/Horizontal/&/0}{105/&/true/&/Horizontal/&/0}{102/&/true/&/Horizontal/&/0}{103/&/true/&/Horizontal/&/0}{151/&/true/&/Horizontal/&/0}{16/&/true/&/Horizontal/&/0}{1/&/true/&/Horizontal/&/0}{2/&/true/&/Horizontal/&/0}{12/&/true/&/Horizontal/&/0}{13/&/true/&/Horizontal/&/0}{5/&/true/&/Horizontal/&/0}{14/&/true/&/Horizontal/&/0}{10/&/true/&/Horizontal/&/0}{213/&/true/&/Horizontal/&/0}{155/&/true/&/Horizontal/&/0}{205/&/false/&/Horizontal/&/0}{218/&/false/&/Horizontal/&/0}{6/&/true/&/Horizontal/&/0}{4/&/true/&/Horizontal/&/0}{201/&/false/&/Horizontal/&/0}{217/&/true/&/Horizontal/&/0}{214/&/false/&/Horizontal/&/0}{153/&/true/&/Horizontal/&/0}{203/&/true/&/Horizontal/&/0}{221/&/true/&/Horizontal/&/0}{220/&/true/&/Horizontal/&/0}{219/&/true/&/Horizontal/&/0}{206/&/false/&/Horizontal/&/0}{17/&/true/&/Horizontal/&/0}{18/&/true/&/Horizontal/&/0}{15/&/true/&/Horizontal/&/0}{11/&/true/&/Horizontal/&/0}{154/&/true/&/Horizontal/&/0}{3/&/true/&/Horizontal/&/0}{222/&/true/&/Horizontal/&/0}{150/&/false/&/Horizontal/&/0}{7/&/true/&/Horizontal/&/0}{8/&/true/&/Horizontal/&/0}{9/&/true/&/Horizontal/&/0}{152/&/true/&/Horizontal/&/0}{202/&/true/&/Horizontal/&/0}{204/&/true/&/Horizontal/&/0}{215/&/true/&/Horizontal/&/0}{216/&/false/&/Horizontal/&/0}
 table_column_order=150\#152\#154\#
 import_local_art_front_keywords=front,cover,case
 import_local_art=true
@@ -27,7 +28,6 @@ file_import_directory_usage=0
 card_view_settings_dialog_size=500/400
 import_local_art_media_keywords=cd,dvd,media
 group_by=
-online_search_query_full_details_initially=true
 online_search_overwrite=false
 online_search_default_mode=
 quick_view_settings_dialog_size=890/534
@@ -44,9 +44,10 @@ import_local_art_recurses=true
 field_settings_dialog_size=829/554
 online_search_retrieved_fields=1\#2\#3\#4\#5\#6\#7\#8\#9\#10\#11\#12\#13\#14\#15\#16\#17\#18\#0\#205\#206\#101\#102\#103\#104\#105\#217\#218\#222\#213\#214\#202\#203\#204\#215\#219\#216\#220\#221\#201\#150\#151\#152\#153\#154\#155\#100000012\#100000014\#100000010\#100000213\#100000155\#100000218\#100000153\#100000011\#100000222\#
 online_search_field_settings_dialog_size=600/450
+report_file=
 web_item_form_fields=12\#100000012\#13\#5\#14\#100000014\#10\#100000010\#213\#100000213\#155\#100000155\#205\#151\#218\#100000218\#6\#0\#4\#2\#1\#201\#217\#214\#153\#100000153\#206\#16\#17\#18\#15\#11\#100000011\#154\#3\#222\#100000222\#150\#7\#8\#9\#101\#104\#105\#102\#103\#152\#
 default_insert_view=0
-field_definitions={150/&/null/&/true/&/true/&/true/&/true/&/lblSummary}{1/&/null/&/true/&/false/&/true/&/true/&/lblSummary}{2/&/null/&/true/&/false/&/false/&/false/&/lblSummary}{152/&/null/&/true/&/false/&/false/&/false/&/lblSummary}{151/&/null/&/true/&/false/&/false/&/false/&/lblSummary}{3/&/null/&/true/&/false/&/false/&/false/&/lblSummary}{222/&/null/&/true/&/false/&/false/&/false/&/lblSummary}{14/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{10/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{12/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{13/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{5/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{213/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{155/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{6/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{154/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{4/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{217/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{153/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{15/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{11/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{7/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{8/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{9/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{205/&/null/&/true/&/false/&/false/&/false/&/lblTechnicalInfo}{206/&/null/&/true/&/false/&/false/&/false/&/lblTechnicalInfo}{218/&/null/&/true/&/false/&/false/&/false/&/lblTechnicalInfo}{202/&/null/&/true/&/false/&/false/&/false/&/null}{216/&/null/&/true/&/false/&/false/&/false/&/null}{204/&/null/&/true/&/false/&/false/&/false/&/null}{215/&/null/&/true/&/false/&/false/&/false/&/null}{201/&/null/&/true/&/false/&/false/&/false/&/null}{214/&/null/&/true/&/false/&/false/&/false/&/null}{203/&/null/&/true/&/false/&/false/&/false/&/null}{221/&/null/&/true/&/false/&/false/&/false/&/null}{220/&/null/&/true/&/false/&/false/&/false/&/null}{219/&/null/&/true/&/false/&/false/&/false/&/null}{16/&/null/&/true/&/false/&/false/&/false/&/null}{17/&/null/&/true/&/false/&/false/&/false/&/null}{18/&/null/&/true/&/false/&/false/&/false/&/null}{101/&/null/&/false/&/false/&/false/&/false/&/lblInformation}{104/&/null/&/false/&/false/&/false/&/false/&/lblInformation}{105/&/null/&/false/&/false/&/false/&/false/&/lblInformation}{102/&/null/&/false/&/false/&/false/&/false/&/lblInformation}{103/&/null/&/false/&/false/&/false/&/false/&/lblInformation}{100000012/&/Artists_persist/&/false/&/false/&/false/&/false/&/null}{100000014/&/Categories_persist/&/false/&/false/&/false/&/false/&/null}{100000010/&/Characters_persist/&/false/&/false/&/false/&/false/&/null}{100000213/&/Container_persist/&/false/&/false/&/false/&/false/&/null}{100000155/&/Countries_persist/&/false/&/false/&/false/&/false/&/null}{100000218/&/External References_persist/&/false/&/false/&/false/&/false/&/null}{0/&/ID/&/false/&/false/&/false/&/false/&/null}{100000153/&/Languages_persist/&/false/&/false/&/false/&/false/&/null}{100000011/&/Publishers_persist/&/false/&/false/&/false/&/false/&/null}{100000222/&/Tags_persist/&/false/&/false/&/false/&/false/&/null}
+field_definitions={150/&/null/&/true/&/true/&/true/&/true/&/lblSummary}{1/&/null/&/true/&/false/&/true/&/true/&/lblSummary}{2/&/null/&/true/&/false/&/false/&/false/&/lblSummary}{152/&/null/&/true/&/false/&/false/&/false/&/lblSummary}{151/&/null/&/true/&/false/&/false/&/false/&/lblSummary}{3/&/null/&/true/&/false/&/false/&/false/&/lblSummary}{222/&/null/&/true/&/false/&/false/&/false/&/lblSummary}{14/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{10/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{12/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{13/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{5/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{213/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{155/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{6/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{154/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{4/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{217/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{153/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{15/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{11/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{7/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{8/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{9/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{16/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{205/&/null/&/true/&/false/&/false/&/false/&/lblTechnicalInfo}{206/&/null/&/true/&/false/&/false/&/false/&/lblTechnicalInfo}{218/&/null/&/true/&/false/&/false/&/false/&/lblTechnicalInfo}{207/&/null/&/true/&/false/&/false/&/false/&/lblTechnicalInfo}{208/&/null/&/true/&/false/&/false/&/false/&/lblTechnicalInfo}{100000013/&/null/&/false/&/false/&/false/&/false/&/null}{100000015/&/null/&/false/&/false/&/false/&/false/&/null}{19/&/null/&/true/&/false/&/false/&/false/&/null}{202/&/null/&/true/&/false/&/false/&/false/&/null}{216/&/null/&/true/&/false/&/false/&/false/&/null}{204/&/null/&/true/&/false/&/false/&/false/&/null}{215/&/null/&/true/&/false/&/false/&/false/&/null}{201/&/null/&/true/&/false/&/false/&/false/&/null}{214/&/null/&/true/&/false/&/false/&/false/&/null}{203/&/null/&/true/&/false/&/false/&/false/&/null}{221/&/null/&/true/&/false/&/false/&/false/&/null}{220/&/null/&/true/&/false/&/false/&/false/&/null}{219/&/null/&/true/&/false/&/false/&/false/&/null}{17/&/null/&/true/&/false/&/false/&/false/&/null}{18/&/null/&/true/&/false/&/false/&/false/&/null}{101/&/null/&/false/&/false/&/false/&/false/&/lblInformation}{104/&/null/&/false/&/false/&/false/&/false/&/lblInformation}{105/&/null/&/false/&/false/&/false/&/false/&/lblInformation}{102/&/null/&/false/&/false/&/false/&/false/&/lblInformation}{103/&/null/&/false/&/false/&/false/&/false/&/lblInformation}{100000012/&/Artists_persist/&/false/&/false/&/false/&/false/&/null}{100000010/&/Characters_persist/&/false/&/false/&/false/&/false/&/null}{100000213/&/Container_persist/&/false/&/false/&/false/&/false/&/null}{100000155/&/Countries_persist/&/false/&/false/&/false/&/false/&/null}{100000218/&/External References_persist/&/false/&/false/&/false/&/false/&/null}{0/&/ID/&/false/&/false/&/false/&/false/&/null}{100000153/&/Languages_persist/&/false/&/false/&/false/&/false/&/null}{100000011/&/Publishers_persist/&/false/&/false/&/false/&/false/&/null}{100000222/&/Tags_persist/&/false/&/false/&/false/&/false/&/null}
 file_import_online_service_mode=
 mass_update_use_original_service_settings=false
 file_import_dialog_size=550/600
