@@ -1,3 +1,6 @@
+msgComicBookMassUpdateHelp = Werkt stripboeken bij met informatie opgehaald met de geselecteerde online service.
+msgComicBookCharacterMassUpdateHelp = Werkt stripfiguren bij met informatie opgehaald met de geselecteerde online service. Hiervoor is een perfecte match nodig op de naam.
+msgBoardGameMassUpdateHelp = Werkt bordspellen bij met informatie opgehaald met de geselecteerde online service.
 sysComic=Stripboek
 sysComicItemPlural=Stripboeken
 sysComicItem=Stripboek
